; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/mkdosfs/extr_mkdosfs.c_mark_FAT_sector.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/mkdosfs/extr_mkdosfs.c_mark_FAT_sector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@start_data_sector = common dso_local global i32 0, align 4
@bs = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@sector_size = common dso_local global i32 0, align 4
@HARD_SECTOR_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [57 x i8] c"Invalid cluster number in mark_FAT_sector: probably bug!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @mark_FAT_sector to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mark_FAT_sector(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @start_data_sector, align 4
  %8 = sub nsw i32 %6, %7
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bs, i32 0, i32 0), align 8
  %10 = trunc i64 %9 to i32
  %11 = sdiv i32 %8, %10
  %12 = load i32, i32* @sector_size, align 4
  %13 = load i32, i32* @HARD_SECTOR_SIZE, align 4
  %14 = sdiv i32 %12, %13
  %15 = sdiv i32 %11, %14
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = call i32 @die(i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str, i64 0, i64 0))
  br label %20

20:                                               ; preds = %18, %2
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @mark_FAT_cluster(i32 %21, i32 %22)
  ret void
}

declare dso_local i32 @die(i8*) #1

declare dso_local i32 @mark_FAT_cluster(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
